docs: try to fix navigation on mobile

--- a/docs/_sass/uikit/components/navbar.scss
+++ b/docs/_sass/uikit/components/navbar.scss
@@ -280,14 +280,14 @@ $navbar-dropbar-z-index:                         $global-z-index - 20 !default;
  ========================================================================== */
 
 .uk-navbar-toggle {
-    color: $navbar-toggle-color;
+    color: #FDFAE2;
     @if(mixin-exists(hook-navbar-toggle)) {@include hook-navbar-toggle();}
 }
 
 .uk-navbar-toggle:hover,
 .uk-navbar-toggle:focus,
 .uk-navbar-toggle.uk-open {
-    color: $navbar-toggle-hover-color;
+    color: #BD8E47;
     outline: none;
     text-decoration: none;
     @if(mixin-exists(hook-navbar-toggle-hover)) {@include hook-navbar-toggle-hover();}
