--- a/docs/_sass/uikit/mixins-theme.scss
+++ b/docs/_sass/uikit/mixins-theme.scss
@@ -1268,14 +1268,14 @@
     }
 
     .uk-navbar-toggle {
-        color: $inverse-navbar-toggle-color;
+        color: #FDFAE2;
         @if(mixin-exists(hook-inverse-navbar-toggle)) {@include hook-inverse-navbar-toggle();}
     }
 
     .uk-navbar-toggle:hover,
     .uk-navbar-toggle:focus,
     .uk-navbar-toggle.uk-open {
-        color: $inverse-navbar-toggle-hover-color;
+        color: #FDFAE2;
         @if(mixin-exists(hook-inverse-navbar-toggle-hover)) {@include hook-inverse-navbar-toggle-hover();}
     }
 
