--- a/docs/_sass/uikit/variables-theme.scss
+++ b/docs/_sass/uikit/variables-theme.scss
@@ -8,7 +8,7 @@ $accordion-title-color: $global-emphasis-color !default;
 $global-color: #666 !default;
 $accordion-title-hover-color: $global-color !default;
 $accordion-content-margin-top: $global-margin !default;
-$global-inverse-color: #fff !default;
+$global-inverse-color: #FDFAE2 !default;
 $inverse-global-emphasis-color: $global-inverse-color !default;
 $inverse-accordion-title-color: $inverse-global-emphasis-color !default;
 $inverse-global-inverse-color: $global-color !default;
@@ -142,7 +142,7 @@ $base-pre-font-family: $base-code-font-family !default;
 $base-pre-color: #f7f7f7 !default;
 $base-selection-background: #39f !default;
 $base-selection-color: $global-inverse-color !default;
-$inverse-global-color: rgba($global-inverse-color, 0.7) !default;
+$inverse-global-color: #FDFAE2 !default;
 $inverse-base-color: $inverse-global-color !default;
 $inverse-base-link-color: $inverse-global-emphasis-color !default;
 $inverse-base-link-hover-color: $inverse-global-emphasis-color !default;
