--- a/docs/_sass/uikit/variables.scss
+++ b/docs/_sass/uikit/variables.scss
@@ -142,7 +142,7 @@ $base-pre-font-family: $base-code-font-family !default;
 $base-pre-color: $global-color !default;
 $base-selection-background: #39f !default;
 $base-selection-color: $global-inverse-color !default;
-$inverse-global-color: rgba($global-inverse-color, 0.7) !default;
+$inverse-global-color: #FDFAE2 !default;
 $inverse-base-color: $inverse-global-color !default;
 $inverse-base-link-color: $inverse-global-emphasis-color !default;
 $inverse-base-link-hover-color: $inverse-global-emphasis-color !default;
